fix: improve text visibility

--- a/styles.css
+++ b/styles.css
@@ -46,19 +46,22 @@ nav {
   align-items: center;
   width: 100%;
 
-  padding: 1rem;
+  padding: 1.5rem;
 
   position: absolute;
   top: 0;
 }
 
 nav a {
+  font-size: clamp(1.2rem, calc(1.2rem + 0.1vw), 2.5rem);
+
   z-index: 1;
   text-decoration: none;
   color: var(--color-primary-highlight);
 }
 
 nav a:hover {
+  text-decoration: underline;
   color: var(--color-secondary-highlight);
 }
 
@@ -79,7 +82,6 @@ nav a:hover {
   width: 80vw;
 
   text-align: center;
-  font-size: clamp(1rem, 1rem + 1vw, 1.5rem);
 
   gap: 2rem;
 
@@ -87,10 +89,12 @@ nav a:hover {
 }
 
 .header--text h1 {
+  font-size: clamp(2rem, calc(2rem + 1vw), 6rem);
   color: var(--color-primary-highlight);
 }
 
 .header--text p {
+  font-size: clamp(1.2rem, calc(1.2rem + 0.2vw), 2.5rem);
   color: var(--color-secondary-highlight);
 }
 
@@ -149,15 +153,7 @@ header::before {
     text-align: right;
 
     margin-inline-end: 3rem;
-    width: clamp(20ch, calc(20ch + 20vw), 40ch);
-  }
-
-  .header--text h1 {
-    font-size: 2rem;
-  }
-
-  .header--text p {
-    font-size: 1.2rem;
+    width: clamp(25ch, calc(25ch + 20vw), 100ch);
   }
 }
 
